VSCodeの設定ファイルを更新

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,7 +13,10 @@
 			],
 			"program": "${workspaceFolder}\\node_modules\\electron\\cli.js",
 			"args": ["--trace-warnings", "."],
-			"preLaunchTask": "${defaultBuildTask}"
+			"preLaunchTask": "${defaultBuildTask}",
+			"runtimeExecutable": "fnm",
+			"runtimeArgs": ["exec", "--using-file", "--", "node"],
+			"restart": true
 		}
 	]
 }
