--- a/package.json
+++ b/package.json
@@ -54,10 +54,11 @@
   },
   "devDependencies": {
     "@tsconfig/next": "^2.0.3",
-    "@tsconfig/node20": "^20.1.5",
+    "@tsconfig/node22": "^22.0.1",
     "@types/node": "^22.14.1",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
+    "@types/semver": "^7.7.0",
     "@typescript-eslint/eslint-plugin": "^8.30.1",
     "@typescript-eslint/parser": "^8.30.1",
     "electron": "^35.1.5",
