--- a/package.json
+++ b/package.json
@@ -48,20 +48,21 @@
     "electron-log": "^5.3.3",
     "electron-next": "^3.1.5",
     "electron-store": "^10.0.1",
+    "globals": "^16.0.0",
     "p-queue": "^8.1.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "semver": "^7.7.1"
   },
   "devDependencies": {
+    "@eslint/js": "^9.25.0",
+    "@stylistic/eslint-plugin-ts": "^4.2.0",
     "@tsconfig/next": "^2.0.3",
     "@tsconfig/node22": "^22.0.1",
     "@types/node": "^22.14.1",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@types/semver": "^7.7.0",
-    "@typescript-eslint/eslint-plugin": "^8.30.1",
-    "@typescript-eslint/parser": "^8.30.1",
     "electron": "^35.1.5",
     "electron-builder": "^26.0.12",
     "eslint": "^9.24.0",
@@ -74,7 +75,8 @@
     "prettier": "^3.5.3",
     "rimraf": "^6.0.1",
     "sass": "^1.86.3",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.30.1"
   },
   "build": {
     "artifactName": "${productName}-v${version}-${os}.${ext}",
