--- a/package.json
+++ b/package.json
@@ -28,51 +28,55 @@
   "author": "walk8243 <walk8243@gmail.com> (https://walk8243.xyz/)",
   "license": "MIT",
   "engines": {
-    "node": "20.x"
+    "node": "22.x"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.0",
-    "@fontsource/roboto": "^5.0.8",
-    "@fortawesome/free-brands-svg-icons": "^6.5.1",
-    "@fortawesome/free-regular-svg-icons": "^6.5.1",
-    "@fortawesome/free-solid-svg-icons": "^6.5.1",
-    "@fortawesome/react-fontawesome": "^0.2.0",
-    "@mui/icons-material": "^5.15.16",
-    "@mui/material": "^5.15.16",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@fontsource/roboto": "^5.2.5",
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-brands-svg-icons": "^6.7.2",
+    "@fortawesome/free-regular-svg-icons": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
+    "@mui/icons-material": "^7.0.2",
+    "@mui/material": "^7.0.2",
     "@walk8243/amethyst-common": "file:common",
-    "dayjs": "^1.11.10",
-    "electron-devtools-installer": "^3.2.0",
-    "electron-is-dev": "^1.2.0",
-    "electron-log": "^5.1.1",
+    "dayjs": "^1.11.13",
+    "electron-devtools-installer": "^4.0.0",
+    "electron-is-dev": "^3.0.1",
+    "electron-log": "^5.3.3",
     "electron-next": "^3.1.5",
-    "electron-store": "^8.1.0",
-    "p-queue": "^6.6.2",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "semver": "^7.6.0"
+    "electron-store": "^10.0.1",
+    "globals": "^16.0.0",
+    "p-queue": "^8.1.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "semver": "^7.7.1"
   },
   "devDependencies": {
+    "@eslint/js": "^9.25.0",
+    "@stylistic/eslint-plugin-ts": "^4.2.0",
     "@tsconfig/next": "^2.0.3",
-    "@tsconfig/node20": "^20.1.4",
-    "@types/node": "^20.12.9",
-    "@types/react": "^18.3.1",
-    "@types/react-dom": "^18.3.0",
-    "@typescript-eslint/eslint-plugin": "^7.8.0",
-    "@typescript-eslint/parser": "^7.8.0",
-    "electron": "^33.2.0",
-    "electron-builder": "^24.13.3",
-    "eslint": "^8.57.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-react": "^7.33.2",
+    "@tsconfig/node22": "^22.0.1",
+    "@types/node": "^22.14.1",
+    "@types/react": "^19.1.2",
+    "@types/react-dom": "^19.1.2",
+    "@types/semver": "^7.7.0",
+    "electron": "^35.2.0",
+    "electron-builder": "^26.0.12",
+    "eslint": "^9.24.0",
+    "eslint-config-prettier": "^10.1.2",
+    "eslint-plugin-prettier": "^5.2.6",
+    "eslint-plugin-react": "^7.37.5",
     "modern-css-reset": "^1.4.0",
-    "next": "^14.2.17",
+    "next": "^15.3.0",
     "png2icons": "^2.0.1",
-    "prettier": "^3.2.5",
-    "rimraf": "^5.0.5",
-    "sass": "^1.80.6",
-    "typescript": "^5.4.5"
+    "prettier": "^3.5.3",
+    "rimraf": "^6.0.1",
+    "sass": "^1.86.3",
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.30.1"
   },
   "build": {
     "artifactName": "${productName}-v${version}-${os}.${ext}",
